--- a/ios/expenseTracker/LaunchScreen.storyboard
+++ b/ios/expenseTracker/LaunchScreen.storyboard
@@ -3,7 +3,7 @@
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,22 +17,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Splash_screen" translatesAutoresizingMaskIntoConstraints="NO" id="eZO-f6-pfm">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Splash_screen" translatesAutoresizingMaskIntoConstraints="NO" id="eZO-f6-pfm">
                                 <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="MAZ-k6-Ybc"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="eZO-f6-pfm" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="09Q-Wn-vDO"/>
-                            <constraint firstItem="eZO-f6-pfm" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="584-jd-PVh"/>
-                            <constraint firstAttribute="bottom" secondItem="eZO-f6-pfm" secondAttribute="bottom" id="5aq-tX-oS0"/>
-                            <constraint firstAttribute="trailing" secondItem="eZO-f6-pfm" secondAttribute="trailing" id="9SV-es-a4H"/>
-                            <constraint firstItem="eZO-f6-pfm" firstAttribute="bottom" secondItem="Ze5-6b-2t3" secondAttribute="bottom" id="D8A-9G-Ym6"/>
-                            <constraint firstItem="eZO-f6-pfm" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="K39-Nw-5mZ"/>
-                            <constraint firstItem="eZO-f6-pfm" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" id="XNN-IW-N8U"/>
-                            <constraint firstItem="eZO-f6-pfm" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Ylp-8m-4nc"/>
-                        </constraints>
+                        <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -41,8 +32,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Splash_screen" width="552" height="1194.6666259765625"/>
-        <systemColor name="systemBackgroundColor">
+        <image name="Splash_screen" width="166.66667175292969" height="166.66667175292969"/>
+        <systemColor name="secondarySystemGroupedBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
